Fixed sticky columns, table overflow, sticky column borders NAS-108952

--- a/src/app/pages/common/entity/entity-tree-table/entity-tree-table.component.css
+++ b/src/app/pages/common/entity/entity-tree-table/entity-tree-table.component.css
@@ -40,4 +40,15 @@ td.action-class {
   max-width: 24px;
   padding: 0 16px;
   text-align: right;
+  position: sticky;
+  right: 0;
+  background: var(--bg2);
+}
+
+th.sticky-border-right, td.sticky-border-right {
+  border-right: 1px solid var(--lines);
+}
+
+th.sticky-border-left, td.sticky-border-left  {
+  border-left: 1px solid var(--lines);
 }
